--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
             <h3>Kitties to adopt now!</h3>
         </div>
         <div class="container1">
-            <div class="item1">
+            <figure>
                 <img src="./img/img1.jpg" alt="Furry Kitten no.1">
-                <small>Furry Kitten no.1</small>
-            </div>
-            <div class="item2">
+                <figcaption>Furry Kitten no.1</figcaption>
+            </figure>
+            <figure>
                 <img src="./img/img2.jpg" alt="Furry Kitten no.2">
-                <small>Furry Kitten no.2</small>
-            </div>
-            <div class="item3">
+                <figcaption>Furry Kitten no.2</figcaption>
+            </figure>
+            <figure>
                 <img src="./img/img3.jpg" alt="Furry Kitten no.3">
-                <small>Furry Kitten no.3</small>
-            </div>
-            <div class="item4">
+                <figcaption>Furry Kitten no.3</figcaption>
+            </figure>
+            <figure>
                 <img src="./img/img4.jpg" alt="Furry Kitten no.4">
-                <small>Furry Kitten no.4</small>
-            </div>
+                <figcaption>Furry Kitten no.4</figcaption>
+            </figure>
         </div>
         <div class="qoute">
             <figure>
