--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="containerintro">
                 <div class="containerintro1">
                     <h1>Kitties for Adoption</h1>
-                    <p>Adopt a kitten for free, don't be shy...</p> <br>
+                    <p>Adopt a kitten for free, don't be shy...</p> <br> <br>
                     <button><a href="">Sign up</a></button>
                 </div>
                 <div class="containerintro2">
